# embassy-ariel

cyw43/: Cargo.toml
cyw43-pio/: Cargo.toml
embassy-boot/: Cargo.toml
embassy-boot-nrf/: Cargo.toml
embassy-boot-rp/: Cargo.toml
embassy-boot-stm32/: Cargo.toml
embassy-embedded-hal/: Cargo.toml
embassy-executor/: Cargo.toml
embassy-hal-internal/src/: macros.rs
embassy-imxrt/: Cargo.toml
embassy-mcxa/: Cargo.toml
embassy-microchip/: Cargo.toml
embassy-mspm0/: Cargo.toml
embassy-net/: Cargo.toml
embassy-net-adin1110/: Cargo.toml
embassy-net-driver-channel/: Cargo.toml
embassy-net-enc28j60/: Cargo.toml
embassy-net-esp-hosted/: Cargo.toml
embassy-net-nrf91/: Cargo.toml
embassy-net-ppp/: Cargo.toml
embassy-net-tuntap/: Cargo.toml
embassy-net-wiznet/: Cargo.toml
embassy-nrf/: Cargo.toml
embassy-nrf/src/: lib.rs
embassy-nxp/: Cargo.toml
embassy-rp/: Cargo.toml
embassy-stm32/: Cargo.toml
embassy-stm32-wpan/: Cargo.toml
embassy-time/: Cargo.toml
embassy-time-queue-utils/: Cargo.toml
embassy-usb/: Cargo.toml
embassy-usb-dfu/: Cargo.toml
embassy-usb-logger/: Cargo.toml
embassy-usb-synopsys-otg/: Cargo.toml
examples/lpc55s69/: Cargo.toml
examples/mcxa2xx/: Cargo.toml
examples/mcxa5xx/: Cargo.toml
examples/microchip/: Cargo.toml
examples/mimxrt1011/: Cargo.toml
examples/mimxrt1062-evk/: Cargo.toml
examples/mimxrt6/: Cargo.toml
examples/mspm0c1104/: Cargo.toml
examples/mspm0g3507/: Cargo.toml
examples/mspm0g3519/: Cargo.toml
examples/nrf52840-rtic/: Cargo.toml
tests/perf-client/: Cargo.toml
(+92 files in other folders)
