[package]
edition = "2024"
name = "embassy-nrf52840-rtic-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }

embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = [ "defmt", "defmt-timestamp-uptime"] }
embassy-time-queue-utils = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-nrf = { version = "0.10.0", features = [ "defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/nrf52840-rtic" }
]
