[package]
name = "perf-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-net = { version = "0.9.0", features = ["defmt", "tcp", "dhcpv4"] }
embassy-time = { version = "0.5.1", features = ["defmt", ] }
embassy-futures = { version = "0.1.2" }
defmt = "1.0.1"
